[gd_scene load_steps=27 format=2]

[ext_resource path="res://Resources/GFX/CardDelivery/Car.png" type="Texture" id=1]
[ext_resource path="res://Scenes/CardDelivery/Decorations.tscn" type="PackedScene" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]
[ext_resource path="res://Scenes/CardDelivery.gd" type="Script" id=4]
[ext_resource path="res://Scenes/CardDelivery/ChooseRoadButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://Resources/GFX/CharacterCardBG.png" type="Texture" id=6]
[ext_resource path="res://Resources/GFX/Interface/Font/TextGame.tres" type="DynamicFont" id=7]
[ext_resource path="res://Resources/GFX/CardDelivery/boom.png" type="Texture" id=8]
[ext_resource path="res://Resources/GFX/Interface/Font/JetBrainsMono-VariableFont_wght.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://Resources/GFX/CardDelivery/comix.png" type="Texture" id=10]

[sub_resource type="CapsuleShape2D" id=1]
radius = 65.8717
height = 135.506

[sub_resource type="DynamicFont" id=2]
size = 500
outline_size = 17
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 9 )

[sub_resource type="Animation" id=3]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1.2, 1.2 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
tracks/0/type = "value"
tracks/0/path = NodePath("Machine:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 0.8 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Machine/Sprite:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=5]
tracks/0/type = "value"
tracks/0/path = NodePath("Machine:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -30.0, 0.0, 30.0, 0.0 ]
}

[sub_resource type="Animation" id=6]
tracks/0/type = "value"
tracks/0/path = NodePath("Machine:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 10.0, 0.0, -10.0, 0.0, 10.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Machine:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.9, 0.9 ), Vector2( 1, 1 ), Vector2( 0.9, 0.9 ), Vector2( 1, 1 ), Vector2( 1.1, 1.1 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Machine/Sprite2:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Machine/Sprite3:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=7]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("RoadDiscription/Label:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "TextPlay"
tracks/0/type = "value"
tracks/0/path = NodePath("Machine/Sprite4:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Machine/Sprite4:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -29.5996 ), Vector2( 0, -159.6 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Machine/Sprite4/Label:custom_colors/font_color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=9]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("RoadDiscription/Label:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "Appear"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "CarCarReaction"
tracks/0/type = "value"
tracks/0/path = NodePath("Machine:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 0.8 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Machine/Sprite:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "CarCustomerReaction"
tracks/0/type = "value"
tracks/0/path = NodePath("Machine:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -30.0, 0.0, 30.0, 0.0 ]
}

[sub_resource type="Animation" id=13]
resource_name = "CarHoleReaction"
tracks/0/type = "value"
tracks/0/path = NodePath("Machine:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 10.0, 0.0, -10.0, 0.0, 10.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Machine:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.9, 0.9 ), Vector2( 1, 1 ), Vector2( 0.9, 0.9 ), Vector2( 1, 1 ), Vector2( 1.1, 1.1 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Machine/Sprite2:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Machine/Sprite3:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=14]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("RoadDiscription/Label:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=15]
resource_name = "TextPlay"
tracks/0/type = "value"
tracks/0/path = NodePath("Machine/Sprite4:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Machine/Sprite4:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -29.5996 ), Vector2( 0, -159.6 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Machine/Sprite4/Label:custom_colors/font_color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=16]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("RoadDiscription/Label:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="CardDelivery" type="Control" groups=[
"CardDelivery",
"Ivent",
]]
anchor_top = 0.173046
anchor_right = 1.0
anchor_bottom = 1.17305
margin_top = -332.248
margin_bottom = -962.248
rect_pivot_offset = Vector2( 540, 960 )
mouse_filter = 2
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="RoadSpawnPosition" type="Position2D" parent="."]
position = Vector2( 0, -1920 )

[node name="Decorations" parent="." instance=ExtResource( 2 )]
is_active = true
road_life_stage = 2

[node name="LeftRoadPostion" type="Position2D" parent="."]
position = Vector2( 260, 1700 )

[node name="MiddleRoadPostion" type="Position2D" parent="."]
position = Vector2( 540, 1700 )

[node name="RightRoadPostion" type="Position2D" parent="."]
position = Vector2( 820, 1700 )

[node name="Machine" type="Sprite" parent="."]
position = Vector2( 540, 1700 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="Machine"]
collision_layer = 3
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Machine/Area2D"]
position = Vector2( 1.07928, 2.47766 )
shape = SubResource( 1 )

[node name="Tween" type="Tween" parent="Machine"]

[node name="Tween2" type="Tween" parent="Machine"]

[node name="Sprite" type="Sprite" parent="Machine"]
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( 0, -139.691 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 8 )

[node name="Sprite2" type="Sprite" parent="Machine"]
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( -65.9258, -46.7959 )
scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 8 )

[node name="Sprite3" type="Sprite" parent="Machine"]
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( 77.9116, 67.0752 )
scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 8 )

[node name="Sprite4" type="Sprite" parent="Machine"]
modulate = Color( 1, 1, 1, 0 )
self_modulate = Color( 0.870588, 0.968627, 0, 1 )
position = Vector2( 0, -29.5996 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 10 )

[node name="Label" type="Label" parent="Machine/Sprite4"]
margin_left = -691.397
margin_top = -508.062
margin_right = 748.603
margin_bottom = 283.938
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "Text"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HidenObjects" type="TextureRect" parent="."]
self_modulate = Color( 1, 1, 1, 0.662745 )
margin_right = 1080.0
margin_bottom = 300.0
rect_min_size = Vector2( 1080, 300 )
rect_pivot_offset = Vector2( 540, 310.8 )
texture = ExtResource( 3 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RoadChangerTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="ChooseRoadLeft" parent="." instance=ExtResource( 5 )]
position = Vector2( 179.572, 69.2229 )

[node name="ChooseRoadMiddle" parent="." instance=ExtResource( 5 )]
position = Vector2( 449.267, 69.2229 )

[node name="ChooseRoadRight" parent="." instance=ExtResource( 5 )]
position = Vector2( 724.956, 69.2229 )

[node name="RoadDiscription" type="TextureRect" parent="."]
anchor_top = 0.227906
anchor_right = 1.0
anchor_bottom = 0.693019
margin_bottom = 6.10352e-05
rect_min_size = Vector2( 1080, 600 )
texture = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="RoadDiscription"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -440.0
margin_top = -200.0
margin_right = 440.0
margin_bottom = 200.0
custom_fonts/font = ExtResource( 7 )
text = "Тестовый 
текст"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Appear = SubResource( 3 )
anims/CarCarReaction = SubResource( 4 )
anims/CarCustomerReaction = SubResource( 5 )
anims/CarHoleReaction = SubResource( 6 )
anims/TextHide = SubResource( 7 )
anims/TextPlay = SubResource( 8 )
anims/TextShow = SubResource( 9 )

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
anims/Appear = SubResource( 10 )
anims/CarCarReaction = SubResource( 11 )
anims/CarCustomerReaction = SubResource( 12 )
anims/CarHoleReaction = SubResource( 13 )
anims/TextHide = SubResource( 14 )
anims/TextPlay = SubResource( 15 )
anims/TextShow = SubResource( 16 )

[node name="CarCrashController" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[connection signal="area_entered" from="Machine/Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="RoadChangerTimer" to="." method="_on_RoadChangerTimer_timeout"]
[connection signal="released" from="ChooseRoadLeft" to="." method="_on_ChooseRoadLeft_released"]
[connection signal="released" from="ChooseRoadMiddle" to="." method="_on_ChooseRoadMiddle_released"]
[connection signal="released" from="ChooseRoadRight" to="." method="_on_ChooseRoadRight_released"]
[connection signal="timeout" from="CarCrashController" to="." method="_on_CarCrashController_timeout"]
